--- a/app/coursetype.html
+++ b/app/coursetype.html
@@ -57,6 +57,7 @@
 
   $('#seven-day').on('click', function() {
     COURSE_STATUS = 'SEVEN'
+    sessionStorage.setItem('type', 7)
     $(this).find('.choice-true').show()
     $(this).find('.choice-false').hide()
     $('#one-year').find('.choice-false').show()
@@ -64,6 +65,7 @@
   })
   $('#one-year').on('click', function() {
     COURSE_STATUS = 'YEAR'
+    sessionStorage.setItem('type', 365)
     $(this).find('.choice-true').show()
     $(this).find('.choice-false').hide()
     $('#seven-day').find('.choice-false').show()
