--- a/app/submitsuccess.html
+++ b/app/submitsuccess.html
@@ -26,7 +26,7 @@
         <span class="weui-loadmore__tips">第二步</span>
       </div>
       <div class="button-sp-area pets-btn-area next-btn-area" style="padding-top:0;">
-        <a href="http://www.qooco.cn/download.html" class="weui-btn weui-btn_primary" id="save">点击下载APP</a>
+        <a href="http://www.qooco.cn/download.html#Talking_Pets_IOS" class="weui-btn weui-btn_primary" id="save">点击下载APP</a>
       </div>
     </article>
   </div>
