--- a/app/index.html
+++ b/app/index.html
@@ -11,19 +11,99 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 
-<body class="container" id="container"> 
-  <ul>
-    <li><a href="./index_page.html">选择身份</a></li>
-    <li><a href="./register.html">巧口萌宠账号注册</a></li>
-    <li><a href="./registerpwd.html">设置登录密码</a></li>
-    <li><a href="./login.html">巧口萌宠账号登录</a></li>
-    <li><a href="./bindaccount.html">手机号绑定</a></li>
-    <li><a href="./babyinfo.html">宝贝信息</a></li>
-    <li><a href="./coursetype.html">选择课程类型</a></li>
-    <li><a href="./activation.html">卡密激活码</a></li>
-    <li><a href="./sendaddr.html">填写资料邮寄地址</a></li>
-    <li><a href="./submitsuccess.html">提交成功</a></li>
-  </ul>
+<body class="container index_page" >
+  <div class="background-bg"></div>
+  <div class="banner">
+    <img src="./images/talking_pets_bannner.jpg" alt="">
+  </div>
+
+  <article class="weui-article entrance">
+    <div class="pannl-box tips-word">
+      <img src="./images/text-over.png">
+      <h2 class="title">亲爱的宝妈宝爸：</h2>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在开始学习前，需要您填写以下信息以便我们确认是您本人并为您开通账号和充值课程，信息保密，请放心填写。</p>
+    </div>
+
+    <div class="account-box">
+      <h2 class="title">您是否已有巧口萌宠账号？</h2>
+      <div class="account-type">
+        <div class="type-cell" id="have-account" >
+          <div class="img-box">
+            <img class="type-img choice-logo-false" src="./images/account-logo-false.png">
+            <img class="type-img choice-logo-true" src="./images/account-logo-true.png" style="display:none;">
+            <img class="choice-true" src="./images/choice-true.png"  style="display:none;">
+            <img class="choice-false" src="./images/choice-close.png">
+          </div>
+          <p>是的，我已经有<br>巧口萌宠账号了</p>
+        </div>
+        <div class="type-cell" id="not-account">
+          <div class="img-box">
+            <img class="type-img choice-logo-false" src="./images/account-logo-false.png">
+            <img class="type-img choice-logo-true" src="./images/account-logo-true.png" style="display:none;">
+            <img class="choice-true" src="./images/choice-true.png" style="display:none;">
+            <img class="choice-false" src="./images/choice-close.png">
+          </div>
+          <p>没有，我还没有<br>巧口萌宠账号</p>
+        </div>
+      </div>   
+    </div>
+
+    <div class="button-sp-area pets-btn-area">
+      <a href="javascript:;" class="weui-btn weui-btn_primary" id="save">确定</a>
+    </div>
+
+  </article>
+
+
+  <div class="weui-footer">
+    <p class="weui-footer__text">Copyright © 2010-2018 Qooco</p>
+  </div>
 
 </body>
+
+<script type="text/javascript" src="./scripts/zepto.min.js"></script>
+<script type="text/javascript" src="./scripts/weui.min.js"></script>
+<script type="text/javascript">
+  /**
+  * 账号状态
+  * @null = 用户为选择
+  * @false = 没有 我还没有巧口萌宠账号
+  * @true = 是的 我已经有巧口萌宠账号了
+  */
+  var ACCOUNT_STATUS = null
+
+  $('#have-account').on('click', function() {
+    ACCOUNT_STATUS = true
+    $(this).find('.choice-false').hide()
+    $(this).find('.choice-true').show()
+    $(this).find('.choice-logo-false').hide()
+    $(this).find('.choice-logo-true').show()
+    $('#not-account').find('.choice-true').hide()
+    $('#not-account').find('.choice-false').show()
+    $('#not-account').find('.choice-logo-true').hide()
+    $('#not-account').find('.choice-logo-false').show()
+  })
+  $('#not-account').on('click', function() {
+    ACCOUNT_STATUS = false
+    $(this).find('.choice-false').hide()
+    $(this).find('.choice-true').show()
+    $(this).find('.choice-logo-false').hide()
+    $(this).find('.choice-logo-true').show()
+    $('#have-account').find('.choice-true').hide()
+    $('#have-account').find('.choice-false').show()
+    $('#have-account').find('.choice-logo-true').hide()
+    $('#have-account').find('.choice-logo-false').show()
+  })
+
+  // 提交按钮
+  $('#save').on('click', function(){
+    if (ACCOUNT_STATUS == null) {
+      weui.confirm('请选择您是否已有巧口账号！');
+    } else if (ACCOUNT_STATUS == false) {
+      location.href = '/register.html'
+    } else {
+      location.href = '/login.html'
+    }
+  })
+</script>
 </html>
